# Conduit

./: .gitignore  6_REDDIT_POST.md  AGENTIC_INTEGRATION.md  EFFORT_INTEGRATION.md  FIRST_POST.md  FORTH_POST.md  PASSTHROUGH_INTEGRATION.md  README.md  SECOND_POST.md  THINKING_INTEGRATION.md  THIRD_POST.md  TOOLS_HOWTO.md  WEBSEARCH_INTEGRATION.md  bash.exe.stackdump  effort_test.bat  pyproject.toml  run.ps1  test.bat  tool_test.bat
.claude/: settings.local.json
conduit/: app.py  config.py  schema.py  sessions.py  streaming.py  tool_bridge.py
conduit/routes/: messages.py  sessions.py
plan/: 01-bootstrap.md  02-config.md  03-schema.md  04-sessions.md  05-streaming.md  06-messages-endpoint.md  07-session-endpoints.md  08-tests.md  09-verify.md  README.md
scripts/: effort_test.py  inference_demo.py  multicycle_demo.py  multiturn_demo.py  passthrough_test.py  thinking_demo.py  tool_demo.py  websearch_test.py
tests/: test_compatibility.py  test_multicycle_tools.py  test_multiturn.py  test_parallel_tools.py  test_routes_unit.py  test_schema.py  test_thinking.py  test_tool_use.py  test_web_search.py
