[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit"
version = "0.1.0"
description = "Anthropic-compatible local Messages API server, powered by claude-agent-sdk"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "alex buz" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "claude-agent-sdk>=0.1.0",
  "anthropic>=0.40",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
conduit = "conduit.app:main"

[tool.hatch.build.targets.wheel]
packages = ["conduit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: requires running Conduit server (and Claude Max OAuth login)",
]
